--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Practical-14</title>
     <!-- css -->
-    <link rel="stylesheet" href="../css/assignment14.css" />
+    <link rel="stylesheet" href="style.css" />
     <!-- font awesome -->
     <link
       rel="stylesheet"
